fix: resolve a broken layout

--- a/focus-mode.css
+++ b/focus-mode.css
@@ -31,16 +31,16 @@ body #skylabWrapper>div {
   font-weight: 700;
 }
 
-#skylabWrapper > div > div.sc-kfvAFW.nXWID {
+#skylabWrapper > div > div.sc-hSLypH.dXpiPK {
   max-width: unset;
 }
 
-#skylabWrapper > div > div.sc-eGkixZ.hBwkmD {
+#skylabWrapper > div > div.sc-hoVGSo.doBSMT {
   margin-top: 5.5rem;
   margin-bottom: 1rem;
 }
 
-#skylabWrapper>div>div.sc-fcOtbr.okxYq {
+#skylabWrapper > div > div.sc-cniqTt.iwFsNh {
   margin-top: 0.8rem;
   gap: 1rem;
 }
